--- a/kpis.ipynb
+++ b/kpis.ipynb
@@ -25,12 +25,12 @@
     "\n",
     "##### Este KPI mide el cambio en la calificación promedio de los negocios gastronómicos o de una categoria específica en el último trimestre respecto al anterior \n",
     "##### Haremos un merge de los datasets business y reviews sobre business id para determinar categoria del negocio, fecha y calificación.\n",
-    "##### Calculamos cuánto aumentó o disminuyó la calificación promedio en el último trimestre respecto del anterior, entendiendo que una caída puede ser beneficioso para un nuevo emprendimiento.\n"
+    "##### Calculamos cuánto aumentó o disminuyó la calificación promedio en el último trimestre respecto del anterior, entendiendo que una caída puede ser beneficiosa para un nuevo emprendimiento.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "\n",
     "##### **Objetivo: Evaluar la probabilidad de éxito de un negocio en determinada zona**\n",
     "\n",
-    "##### Este KPI mide la cantidad de negocios exitosos, medido en las calificaciones recibidas, en relación a la cantidad de negocios abiertos en el último trimestre\n",
+    "##### Este KPI mide la cantidad de negocios exitosos, determinado por las calificaciones recibidas, en relación a la cantidad de negocios abiertos en el último trimestre\n",
     "\n"
    ]
   },
@@ -62,22 +62,22 @@
    "source": [
     "# Código a trabajar \n",
     "\n",
-    "# negocios_esitosos = Negocios exitosos/Total de Negocios abierto"
+    "# negocios_exitosos = Negocios exitosos/Total de Negocios abierto"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3- **Tasa de Saturación del Mercado (Ratio de negocios por habitantes)**\n",
+    "#### 3- **Tasa de Saturación del Mercado (Ratio de negocios o actividad por habitantes)**\n",
     "\n",
     "##### **Objetivo: Evaluar la cantidad de negocios de determinado rubro en relación a la cantidad de hipotéticos consumidores**\n",
     "\n",
     "##### Este KPI mide la cantidad de negocios en una categoría específica en relación con la población de la ubicación en el último trimestre en relación al anterior, a fin de determinar si hay margen para un nuevo local en la zona.\n",
     "\n",
-    "##### Asumimos, en principio, que el ratio debería ser de un negocio por cada 1000 habitantes. \n",
+    "#### Como no tenemos los datos de negocios abiertos por fecha, vamos a deducirlo de las reviews: esto es, si un negocio tiene review en tal fecha es porque está abierto. Asumimos que si un negocio no tiene review en determinada fecha, o no existe o si esxiste no es representativo.\n",
     "\n",
-    "##### Trabajaremos con el dataser business (que no indica cantidad de negocios por categoria y zona) y un dataset adicional que especificará la población de cada ciudad."
+    "##### Trabajaremos con el dataset business (que nos indica cantidad de negocios por categoria y zona), reviews (fecha de las reviews de cada local) y un dataset adicional que especificará la población de cada ciudad."
    ]
   },
   {
@@ -88,15 +88,56 @@
    "source": [
     "# Código a trabajar\n",
     "\n",
-    "# negocio_por_habitante = business.groupby(['categories', 'city']).size().reset_index(name='cantidad_negocios')\n",
+    "# Estimamos cantidad de negocios en base a la existencia de reviews unicas por año\n",
+    "\n",
+    "# df['date'] = pd.to_datetime(df['date'])\n",
+    "# df['year'] = df['date'].dt.year\n",
+    "\n",
+    "# cantidad_negocios = df.groupby('year')['business_id'].nunique().reset_index()\n",
+    "# cantidad_negocios.columns = ['year', 'unique_business_count']\n",
+    "\n",
+    "\n",
+    "# Hacemos un merge de business y un dataset adicional con poblacion total de las ciudades\n",
+    "\n",
     "# negocio_por_habitante = negocio_por_habitante.merge(poblacion_df, on='city')\n",
-    "# negocio_por_habitante['ratio_negocios_habitantes'] = negocio_por_habitante['cantidad_negocios'] / negocio_por_habitante['poblacion']\n"
+    "\n",
+    "# Hacemos un merge de negocio_por_habitante con cantidad_negocios\n",
+    "\n",
+    "# df_merged = pd.merge(negocio_por_habitante, cantidad_negocios, on='business_id')\n",
+    "\n",
+    "\n",
+    "# Comparamos cantidad de negocios abiertos en una ciudad en el último trimestre respecto del trimestre anterior en la categoría elegida\n",
+    "\n",
+    "# df_merged['last_review_date'] = pd.to_datetime(['2024-03-31', '2024-02-15', '2024-03-20', '2024-01-10'])\n",
+    "\n",
+    "# ultimo_trimestre = df_merged[(df_merged['last_review_date'] >= '2024-01-01') & (df_merged['last_review_date'] <= '2024-03-31')]\n",
+    "# trimestre_anterior = df_merged[(df_merged['last_review_date'] >= '2023-10-01') & (df_merged['last_review_date'] <= '2023-12-31')]\n",
+    "\n",
+    "# cantidad_ultimo_trimestre = ultimo_trimestre['cantidad'].sum()\n",
+    "# cantidad_trimestre_anterior = trimestre_anterior['cantidad'].sum()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
