--- a/kpis.ipynb
+++ b/kpis.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "##### Este KPI medirá la satisfacción de los clientes a partir de si regresan o no al local en el último trimestre en relación al trimestre anterior.\n",
     "\n",
-    "objetivo_repeticion = ((Numero de Clientes que Repiten / Numero Total de Clientes) x 100) - 10%"
+    "objetivo_repeticion = (Numero de Clientes que Repiten / Numero Total de Clientes) x 100
    ]
   }
  ],
