--- a/kpis.ipynb
+++ b/kpis.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "##### Este KPI medirá la evolución en la calificación promedio del negocio gastronómico en el último trimestre respecto al trimestre anterior \n",
     "\n",
-    "##### objetivo_calificación = ((Calificacion Promedio Trimestre Actual - Calificacion Promedio Trimestre Anterior) / Calificacion Promedio Trimestre Anterior * 100) - 0,1 %\n",
+    "##### objetivo_calificación = (Calificacion Promedio Trimestre Actual - Calificacion Promedio Trimestre Anterior) / Calificacion Promedio Trimestre Anterior * 100\n",
     "\n",
     "\n"
    ]
@@ -40,9 +40,14 @@
     "\n",
     "##### Este KPI medirá la evolución de la popularidad del nuevo negocio gastronómico respecto del trimestre anterior, entendiendo que un indicador de esa popularidad es que aumente la cantidad de reseñas.\n",
     "\n",
-    "##### objetivo_reseñas = ((Cantidad Reseñas Trimestre Actual - Cantidad Reseñas Trimestre Anterior) / Cantidad Reseñas Trimestre Aanterior * 100) - 5 %\n",
+    "##### objetivo_reseñas = (Cantidad Reseñas Trimestre Actual - Cantidad Reseñas Trimestre Anterior) / Cantidad Reseñas Trimestre Aanterior * 100\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -54,7 +59,7 @@
     "\n",
     "##### Este KPI medirá la satisfacción de los clientes a partir de si regresan o no al local en el último trimestre en relación al trimestre anterior.\n",
     "\n",
-    "objetivo_repeticion = (Numero de Clientes que Repiten / Numero Total de Clientes) x 100
+    "objetivo_repeticion = (Numero de Clientes que Repiten / Numero Total de Clientes) x 100"
    ]
   }
  ],
