--- a/Dataset/ETL/ETL_complementario_gm.ipynb
+++ b/Dataset/ETL/ETL_complementario_gm.ipynb
@@ -462,4 +462,38 @@
  },
  "nbformat": 4,
  "nbformat_minor": 2
+},
+{
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ciudades = ciudades.drop(columns = ['city_normalized'])\n",
+    "ciudades.to_csv(r'data_normalizada/ciudades_normal.csv', index = False)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
+
